// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nuclear shogi > can move 1`] = `
ban:
(1) 
1ab1ac1ad1ae1ah1ae1al1ak1aj
___1ag_______________0am___
1aa1aa1aa1aa1aa1aa___1ai1ai
__________________1aa______
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) af1 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,1,[1,"ab"],[1,"aj"]],[1,3,[1,"aa"],[1,"ai"]],[2,1,[1,"ac"],[1,"ak"]],[2,3,[1,"aa"],[1,"ai"]],[3,1,[1,"ad"],[1,"al"]],[1,0,"af"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 78,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null
}
`;

exports[`Nuclear shogi > can move 2`] = `
ban:
(1) af1 
1ab1ac1ad1ae1ah1ae1al1ak1aj
___1ag_______________1aa___
1aa1aa1aa1aa1aa1aa______1ai
__________________1aa______
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
___0af_______________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,1,[1,"ab"],[1,"aj"]],[1,3,[1,"aa"],[1,"ai"]],[2,1,[1,"ac"],[1,"ak"]],[2,3,[1,"aa"],[1,"ai"]],[3,1,[1,"ad"],[1,"al"]],[1,0,"af"]]
☖同と [1,[2,2,[0,"am"],[1,"ai"]],[2,3,[1,"ai"],[]],[1,1,"af"]]
☗8八角 [0,[8,8,[],[0,"af"]],[2,2,[1,"ai"],[1,"aa"]],[-1,0,"af"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 78,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null
}
`;

exports[`Nuclear shogi > can move 3`] = `
ban:
(1) af1 
1ab1ac1ad1ae1ah1ae1ad1ak1ab
___1ag_______________0af___
1aa___1aa1aa1aa1aa______1aa
___1aa____________1aa______
___________________________
______0aa__________________
0aa0aa___0aa0aa0aa0aa0aa0aa
_____________________0ag___
0ab0ac0ad0ae0ah0ae0ad0ac0ab
(0) aa1 
kifu:
☗7六歩 [0,[7,6,[],[0,"aa"]],[7,7,[0,"aa"],[]]]
☖3四歩 [1,[3,4,[],[1,"aa"]],[3,3,[1,"aa"],[]]]
☗2二角成 [0,[2,2,[1,"af"],[0,"am"]],[8,8,[0,"af"],[]],[1,1,[1,"ab"],[1,"aj"]],[1,3,[1,"aa"],[1,"ai"]],[2,1,[1,"ac"],[1,"ak"]],[2,3,[1,"aa"],[1,"ai"]],[3,1,[1,"ad"],[1,"al"]],[1,0,"af"]]
☖同と [1,[2,2,[0,"am"],[1,"ai"]],[2,3,[1,"ai"],[]],[1,1,"af"]]
☗8八角 [0,[8,8,[],[0,"af"]],[2,2,[1,"ai"],[1,"aa"]],[-1,0,"af"]]
☖8四歩 [1,[8,4,[],[1,"aa"]],[8,3,[1,"aa"],[]]]
☗2二角不成 [0,[2,2,[1,"aa"],[0,"af"]],[8,8,[0,"af"],[]],[1,1,[1,"aj"],[1,"ab"]],[1,3,[1,"ai"],[1,"aa"]],[3,1,[1,"al"],[1,"ad"]],[1,0,"aa"]]
{
  "version": "0.0",
  "status": {
    "num": 1
  },
  "ruleid": 78,
  "teban": 1,
  "turn": 0,
  "date": {},
  "moving": null
}
`;
